[gd_scene load_steps=3 format=3 uid="uid://cqk1g5qgvw2mk"]

[ext_resource type="Script" path="res://scripts/dialogue/dialogue_controller.gd" id="1_2f3p2"]
[ext_resource type="Script" path="res://scripts/dialogue/history_ui.gd" id="2_jk4m3"]

[node name="DialogueSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2f3p2")

[node name="DialogueUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0, 0, 0.8)

[node name="NameLabel" type="Label" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -240.0
offset_right = 300.0
offset_bottom = -200.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "화자 이름"
vertical_alignment = 1

[node name="TextLabel" type="Label" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -180.0
offset_right = -40.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "대화 내용이 여기에 표시됩니다."
autowrap_mode = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ControlsUI" type="HBoxContainer" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 2

[node name="AutoButton" type="Button" parent="DialogueUI/ControlsUI"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
text = "자동"

[node name="SkipButton" type="Button" parent="DialogueUI/ControlsUI"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
toggle_mode = true
text = "스킵"

[node name="HistoryButton" type="Button" parent="DialogueUI/ControlsUI"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "이력"

[node name="SpeedSlider" type="HSlider" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = 86.0
grow_horizontal = 0
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="SpeedLabel" type="Label" parent="DialogueUI/SpeedSlider"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_right = 59.0
offset_bottom = 11.5
grow_vertical = 2
text = "텍스트 속도"

[node name="HistoryUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jk4m3")

[node name="Background" type="ColorRect" parent="HistoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.9)

[node name="ScrollContainer" type="ScrollContainer" parent="HistoryUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HistoryContainer" type="VBoxContainer" parent="HistoryUI/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="CloseButton" type="Button" parent="HistoryUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 51.0
grow_horizontal = 0
text = "X"

[node name="AutoPlayTimer" type="Timer" parent="."]
one_shot = true

[node name="TextTimer" type="Timer" parent="."]